--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="black">
-    <link type="image/png" sizes="16x16" rel="icon" href=".../icons8-gingerbread-house-16.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="https://img.icons8.com/clouds/100/000000/gingerbread-house.png">
     <title>AlexVrg.org</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js" defer></script>
@@ -29,7 +29,7 @@
    <header class="primary-header">
        <div style="display: block;">
        <a href="#" class="logo">Alex Varghese</a>
-       <div style="text-align: center; margin-top: 10px; padding: 5px;background-color: #00000086;border-radius: 20px;color: #ffffff8b;" id="tagline" class="tagline" ><a href="#sec" style="text-decoration: none;">Scroll down to explore more</a></div style="text-align: center;">
+       <div style="text-align: center; margin-top: 10px; padding: 5px;background-color: #00000086;border-radius: 20px;color: #ffffff8b;" id="tagline" class="tagline" ><a href="#sec" style="text-decoration: none;color: #ffffff8b;">Scroll down to explore more</a></div style="text-align: center;">
        </div>
    
        <button class="mobile-nav-toggle" aria-controls="primary-navigation"><span class="sr-only"></span></button> 
